lanecwe-Prod/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>In_Next_Months_Release__c</fullName>
        <description>Used to display items scheduled to begin work NEXT WEEK without having to constantly change the value.  

Week of the year is the IF( with CEILING....this needs to be updated each year unless Jan. 1 is a Sunday.  If its a Sunday it should be +1 instead of -3.  For 2014 Jan. 1 is wednesday so it needs to be 4 less so +1 - 4 = -3 is where that comes from.  I also removed the first section as unlikely to hit a week of 53 the way i am using this.  

IF( 
  CEILING( ( Estimated_Start_Date__c- DATE( YEAR( Estimated_Start_Date__c), 1, 1) - 3) / 7) &gt; 52,
  &quot;52&quot;,
  TEXT(CEILING( ( Estimated_Start_Date__c- DATE( YEAR( Estimated_Start_Date__c ), 1, 1) - 3) / 7))
)</description>
        <formula>IF( 
CEILING( ( Estimated_Start_Date__c- DATE( YEAR( Estimated_Start_Date__c ), 1, 1) - 3) / 7) = (CEILING( ( TODAY() - DATE( YEAR( TODAY()), 1, 1) - 3) / 7)+1), &quot;TRUE&quot;, &quot;FALSE&quot;
) 


/*changed 8/8/2014 as moving to 2 week sprints_Andy*/
/* IF(
 ClosedDate &lt; (NOW() - 60), &quot;Prior Month/Year Release&quot;,
IF(Release_Phase__c = &quot;1.1.2014&quot;, &quot;True&quot;, 
IF(Release_Phase__c = &quot;1.2.2014&quot;, &quot;True&quot;,
IF(
CASE(MONTH(TODAY()),
1, &quot;February&quot;,
2, &quot;March&quot;,
3, &quot;April&quot;,
4, &quot;May&quot;, 
5, &quot;June&quot;,
6, &quot;July&quot;, 
7, &quot;August&quot;,
8, &quot;September&quot;, 
9, &quot;October&quot;,
10, &quot;November&quot;,
11, &quot;December&quot;,
12, &quot;January&quot;, &quot;Error in formula&quot;
) =  TEXT(Estimated_Release_Month__c) , &quot;True&quot;, 
IF(
CASE(MONTH(TODAY()),
1, &quot;February&quot;,
2, &quot;March&quot;,
3, &quot;April&quot;,
4, &quot;May&quot;, 
5, &quot;June&quot;,
6, &quot;July&quot;, 
7, &quot;August&quot;,
8, &quot;September&quot;, 
9, &quot;October&quot;,
10, &quot;November&quot;,
11, &quot;December&quot;,
12, &quot;January&quot;, &quot;Error in formula&quot;
) = &quot;Error in formula&quot;, &quot;Error in formula&quot;,
&quot;False&quot;
)))))
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z-isNext Week Start</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Category_Sub_Type_Details__c</fullName>
        <label>x-Issue Category Sub-Type Details</label>
        <picklist>
            <controllingField>Issue_Category_Sub_Type__c</controllingField>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Dialing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noises/Echo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press 1 issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thumbnail doesn&apos;t show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webpage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Category_Sub_Type__c</fullName>
        <label>x-Issue Category Sub-Type</label>
        <picklist>
            <controllingField>Issue_Category_Type__c</controllingField>
            <picklistValues>
                <fullName>*22 Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activation Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Selection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blank Cube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Guest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call My Computer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call My Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat Everyone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect to room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Guest/Trial to Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Guest to Trial (no billing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deletes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dialing Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dial-in Old School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dislike</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dismiss Guest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not have the features I need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downloads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Guest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Category_Type__c</fullName>
        <label>Issue Category Type</label>
        <picklist>
            <controllingField>Issue_Category__c</controllingField>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Guests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Guests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help/Feedback Button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Files</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From Aus w/ love</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info/Bio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPhone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Room Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile-Other Smartphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile-Other Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook Toolbar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recording</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room Monitor/Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sign In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sign Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <label>Issue Category</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback/Suggestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry/Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Phase Clean-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issues_Category_Type__c</fullName>
        <label>Issues Category Type</label>
        <picklist>
            <controllingField>Issues_Category__c</controllingField>
            <picklistValues>
                <fullName>Admin Suggestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Break/Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Out Existing Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creating Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Clean-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Insert/Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplication Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubspot Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead/Contact Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Login or Permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Suggestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package Screens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports &amp; Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Suggestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Improvement</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issues_Category__c</fullName>
        <label>Issues Category</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Phase Clean-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote/Contract Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JIRA_Number__c</fullName>
        <inlineHelpText>JIRA request number</inlineHelpText>
        <label>JIRA Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LW_Case_Number__c</fullName>
        <externalId>true</externalId>
        <label>x-LW Case Number</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Latest_Escalation_Date__c</fullName>
        <description>Shows the latest escalation Date/Time; Set by a workflow rule at each level of escalation.</description>
        <inlineHelpText>Shows the latest escalation Date/Time; Set by a workflow rule at each level of escalation.</inlineHelpText>
        <label>Latest Escalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location_New__c</fullName>
        <formula>IF(BEGINS ( OwnerId , &quot;005&quot;), Case_Owner_Copy__r.Location__c ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>x-Location-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>This defaults from Owners location and will be read only.</description>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Release_Notes__c</fullName>
        <inlineHelpText>short reminder of steps relating to manual release.</inlineHelpText>
        <label>Manual Release Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Actual_Start_Time__c</fullName>
        <label>x-Meeting Actual Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Scheduled_Start_Time__c</fullName>
        <label>x-Meeting Scheduled Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Most_Recent_On_Hold_Date__c</fullName>
        <inlineHelpText>field to track when the most recent date was that a case status was set to on hold.</inlineHelpText>
        <label>Most Recent On Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NS_Case_Number__c</fullName>
        <description>Used to house the workflow that copies over the Case Number from the Description.</description>
        <label>x-NS Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <inlineHelpText>What are the next steps needed to move forward with this request?</inlineHelpText>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Guests_in_Meeting__c</fullName>
        <label>x-Number of Guests in Meeting</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On Hold Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <label>x-Other Details</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Sub_Type__c</fullName>
        <label>x-Other Sub-Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Type__c</fullName>
        <label>x-Other Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region_New__c</fullName>
        <formula>IF(BEGINS ( OwnerId , &quot;005&quot;), TEXT( Case_Owner_Copy__r.Region__c ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <description>This will be defaulted with Owner&apos;s region and read only</description>
        <label>Submitted by Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_Impact_Priority__c</fullName>
        <formula>Project__r.Impact_Priority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P-Impact Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_Impacted_Org__c</fullName>
        <formula>Project__r.Impacted_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P-Impacted Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_Initiating_Group__c</fullName>
        <formula>TEXT(Project__r.Initiating_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P-Initiating Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_Project_ID__c</fullName>
        <formula>RIGHT( Project__r.Project_ID__c, 6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P-Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_Project_Start_Date__c</fullName>
        <formula>Project__r.Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P-Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Project_Status__c</fullName>
        <formula>TEXT(Project__r.Project_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P-Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_Projected_Release_Month__c</fullName>
        <formula>TEXT(Project__r.Projected_Release_Month__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P-Projected Release Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_Score__c</fullName>
        <formula>Project__r.Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P-Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_Value_to_the_Business__c</fullName>
        <formula>Project__r.Value_to_Business__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P-Value to the Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Gauge__c</fullName>
        <formula>IMAGE( 
CASE(Priority, 
&quot;Low&quot;, &quot;/img/samples/stars_100.gif&quot;,
&quot;Medium&quot;, &quot;/img/samples/stars_200.gif&quot;,
&quot;High&quot;, &quot;/img/samples/stars_300.gif&quot;,
&quot;Very High&quot;, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;), 
&quot;Priority Flag&quot;, 20, 90)</formula>
        <label>Priority Gauge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Number__c</fullName>
        <inlineHelpText>used to track customer priority, primarily for NA Contract Team priority issues.</inlineHelpText>
        <label>Priority Number</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Order__c</fullName>
        <label>Priority Order</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>P-Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Overall_Status__c</fullName>
        <label>P-Project Overall Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Roadmap_ID__c</fullName>
        <label>x-P-Project Roadmap ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Solution__c</fullName>
        <inlineHelpText>The proposed or implemented solution to this case.</inlineHelpText>
        <label>Proposed Solution</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QC_Status__c</fullName>
        <label>QC Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected - See Tier2/3 Notes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q_C_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Q/C Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QC_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q_C_Related_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to identify Q/C items for analysis reasons.</inlineHelpText>
        <label>Q/C Related Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <formula>IF (text(Origin) = &quot;EMEA HelpDesk Queue&quot;,&quot;EMEA&quot;,
IF (text(Origin) = &quot;APAC HelpDesk Queue&quot;,&quot;APAC&quot;,
IF (text(Origin) = &quot;RMKR Support Request&quot;,&quot;RMKR&quot;,
&quot;US&quot;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Sales_Ops_QC_Date__c</fullName>
        <label>Ready for Sales Ops QC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Affected Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Phase__c</fullName>
        <description>The release phase that this case belongs to.  Convention should be 1.1_2014, 1.2_2014, 2.2_2014, 2.1_2015, etc. based on the Release #, Sprint #, and year of release.</description>
        <inlineHelpText>The release phase that this case belongs to.  Convention should be 1.1_2014, 1.2_2014, 2.2_2014, 2.1_2015, etc. based on the Release #, Sprint #, and year of release.</inlineHelpText>
        <label>Release Phase</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Impact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will this request have any impact on reporting?</inlineHelpText>
        <label>Reporting Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Issue_Type__c</fullName>
        <label>x-Reporting Issue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Guest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Comments__c</fullName>
        <label>Resolution Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Status_Copy__c</fullName>
        <formula>CASE(Contact.Status_ID__c, 
1, &quot;1 - Approved &amp; In Process&quot;,
0, &quot;0 - Awaiting Approval&quot;, 
7, &quot;7 - Pending Email Confirmation&quot;,
8, &quot;8 - Active Room&quot;,
2, &quot;2 - Rejected&quot;,
&quot;None&quot;)</formula>
        <label>x-Room Status Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_URL__c</fullName>
        <label>x-Room URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Development Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Data Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Data Entry Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Data Clean-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training/User Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue with current process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_18_ID__c</fullName>
        <formula>Id 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC 18 ID</label>
        <type>Text</type>
    </fields>
</CustomObject>